--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- HEADER -->
     <header>
       <div class="header-wrapper">
-        <h3>🔥 Dev Langford</h3>
+        <h3>B Vikash Kumar</h3>
         <nav>
           <a href="#contact">
             <button>Contact me</button>
@@ -25,38 +25,20 @@
       <div>
         <img class="profile-img" src="./assets/profile.png" />
       </div>
-      <h1>Hey, I'm Langford 👋</h1>
-      <p>Developer, Designer, Creator</p>
+      <h1>Hey, I'm Vikash Kumar </h1>
+      <p>AWS DevOps Engineer</p>
     </div>
 
     <!-- ABOUT -->
     <div class="about">
       <div class="about-wrapper">
         <div class="col">
-          <h2>My Career So Far</h2>
+          <h2>Career Profile So Far</h2>
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown printer took a galley of type
-            and scrambled it to make a type specimen book
+            With over 2+ years of accomplished and results-driven professional expertise at Minfy,
+            I am a highly motivated and adept individual known for swiftly acquiring diverse skill sets. 
+            I am eager to contribute my knowledge and skills within the dynamic realms of Cloud and DevOps environments.
           </p>
-        </div>
-        <div class="skills col">
-          <h2>My Skills</h2>
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>React</li>
-            <li>Tailwind</li>
-            <li>Mongo DB</li>
-            <li>Firebase</li>
-            <li>AWS</li>
-            <li>Google Cloud</li>
-          </ul>
-        </div>
-      </div>
-    </div>
 
     <!-- PROJECTS -->
     <div class="projects">
@@ -90,9 +72,8 @@
       <div class="socials-wrapper">
         <div>
           <h2>Contact Me</h2>
-          <p>+233 550 202 871</p>
-          <p>langfordquarshie21@gmail.com</p>
-          <p>Accra, Ghana</p>
+          <p>+91 7894 899 456</p>
+          <p>bvikashkumar1995@gmail.com</p>
         </div>
         <div class="social-icons">
           <a href="#"><img src="./assets/github.svg" /></a>
