--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
         <div>
           <h2>Contact Me</h2>
           <p>+91 7894 899 456</p>
+          <p>https://github.com/vikash123567</p>
+          <p>www.linkedin.com/in/vikashkumar686</p>
           <p>bvikashkumar1995@gmail.com</p>
         </div>
         <div class="social-icons">
