--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="col">
           <h2>Career Profile So Far</h2>
           <p>
-            With over 2+ years of accomplished and results-driven professional expertise at Minfy,
+            With over 3.5 years of accomplished and results-driven professional expertise at Minfy,
             I am a highly motivated and adept individual known for swiftly acquiring diverse skill sets. 
             I am eager to contribute my knowledge and skills within the dynamic realms of Cloud and DevOps environments.
           </p>
